# Nemu

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
bootrom/: Makefile
nemu-core/: Cargo.toml
nemu-core/bootrom/: build.ps1  build.sh  dmg_boot.asm
nemu-core/src/: bus.rs  context.rs  cpu.rs  debugger.rs  interrupts.rs  joypad.rs  lib.rs  main.rs  memory.rs  ppu.rs  timer.rs  traits.rs
nemu-core/src/cpu/: cpu.rs  mod.rs  opcodes.rs  registers.rs  utils.rs
nemu-core/src/cpu/instructions/: alu.rs  bits.rs  control.rs  load.rs  misc.rs  mod.rs  stack.rs
nemu-core/src/debugger/: breakpoints.rs  disassembler.rs  fps_tracker.rs  memory_viewer.rs  mod.rs
nemu-core/src/mbc/: mbc1.rs  mod.rs  no_mbc.rs
nemu-core/src/ppu/: mod.rs  utils.rs
nemu-gui/: Cargo.toml
nemu-gui/src/: main.rs  screen.rs
src/: app.rs  main.rs
src/app/: app.rs  mod.rs
src/core/: bus.rs  mod.rs
src/core/cpu/: cpu.rs  mod.rs  opcodes.rs  registers.rs
tests/: Cargo.toml
tests/src/: lib.rs
