[package]
name = "nemu-core"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nemu-core"
path = "src/main.rs"
required-features = ["debugger"]

[features]
default = []
debugger = ["dep:eframe", "dep:rfd"]

[dependencies]
eframe = { version = "0.33.2", optional = true }
rfd = { version = "0.16.0", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1